Bug 415889 - Adding connected widgets cannot be cancelled
Summary: Adding connected widgets cannot be cancelled
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.30.0 (KDE Applications 19.12.0)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-05 11:55 UTC by Ralf Habacker
Modified: 2020-01-05 12:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.30.1 (KDE Applications 19.12.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-01-05 11:55:36 UTC
STEPS TO REPRODUCE
1. start umbrello
2. add state diagram
3. add initial state
4. added connected state by context menu
5. Press cancel in the property dialog

OBSERVED RESULT
The state is added regardless if cancel is pressed

EXPECTED RESULT
The state should not be added if cancel is pressed

SOFTWARE/OS VERSIONS
Linux: openSUSE Tumbleweed
KDE Frameworks Version: 5.65
Qt Version: 5.13.1
Comment 1 Ralf Habacker 2020-01-05 12:11:12 UTC
Git commit ed0b70850d2c5486de3a2df5788e03412db5805a by Ralf Habacker.
Committed on 05/01/2020 at 12:01.
Pushed by habacker into branch 'release/19.12'.

Fix 'Adding connected widgets cannot be cancelled'
FIXED-IN:2.30.1 (KDE Applications 19.12.1)

M  +7    -2    umbrello/umlwidgets/umlwidget.cpp

https://invent.kde.org/kde/umbrello/commit/ed0b70850d2c5486de3a2df5788e03412db5805a