Fix 'Adding connected widgets cannot be cancelled'

BUG:415889
FIXED-IN:2.30.1 (KDE Applications 19.12.1)